--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "Joseph Michaels",
   "dependencies": {
     "jquery": "^2.1.4",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
     "underscore": "^1.8.3"
   }
 }
